# formative

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  decisions.rst  estimands.rst  estimators.rst  game.rst  index.rst  refutations.rst
docs/_build/: .buildinfo  .buildinfo.bak  dag.html  estimands.html  estimators.html  genindex.html  index.html  objects.inv  refutations.html  search.html  searchindex.js  wizard.html
docs/_build/.doctrees/: dag.doctree  environment.pickle  estimands.doctree  estimators.doctree  index.doctree  refutations.doctree  wizard.doctree
docs/_build/_sources/: estimands.rst.txt  estimators.rst.txt  index.rst.txt  refutations.rst.txt  wizard.rst.txt
docs/_static/: version_switcher.css
docs/causal/: benchmarks.rst  dag.rst  decisions.rst  estimands.rst  estimators.rst  heterogeneity.rst  introduction.rst  policy.rst  refutations.rst  wizard.rst
docs/design/: policy_learning.md
docs/game/: decision_rules.rst  game.rst  introduction.rst
examples/: 01_ols_basic.py  02_ols_unobserved_confounder.py  03_ols_multiple_confounders.py
examples/decision/: 01_decision_basic.py
examples/did/: 01_did_basic.py
examples/iv/: 01_iv_basic.py  02_iv_vs_ols_bias.py  03_iv_with_observed_confounder.py  04_iv_refutation.py
examples/matching/: 01_basic_matching.py  02_matching_vs_naive.py  03_matching_refutation.py
examples/ols/: 01_ols_basic.py  02_ols_unobserved_confounder.py  03_ols_multiple_confounders.py
examples/rct/: 01_rct_basic.py
examples/rdd/: 01_rdd_basic.py  02_rdd_positive_running_var.py
formative/: __init__.py  _exceptions.py  _explain.py  dag.py  decision.py
formative/causal/: __init__.py  _assumptions.py  _exceptions.py  _explain.py  dag.py  decision.py
formative/causal/estimators/: _base.py  _cate.py  did.py  iv.py  matching.py  ols.py  policy.py  rct.py  rdd.py
formative/causal/refutations/: __init__.py  _check.py  cate.py  did.py  iv.py  matching.py  ols.py  policy.py  rct.py  rdd.py
formative/estimators/: __init__.py  did.py  iv.py  matching.py  ols.py  rct.py  rdd.py
formative/game/: __init__.py  _hurwicz.py  _laplace.py  _maximax.py  _maximin.py  _minimax_regret.py  expected_value.py  hurwicz.py  minimax.py  minimax_regret.py
formative/refutations/: __init__.py  _check.py  did.py  iv.py  matching.py  ols.py  rct.py  rdd.py
notebooks/: card_krueger_benchmark.ipynb  lalonde_benchmark.ipynb
scripts/: snapshot_docs.py
site/: versions.json
site/2.1/: genindex.html  index.html  objects.inv  search.html  searchindex.js
site/2.1/_sources/causal/: decisions.rst.txt  estimators.rst.txt
site/2.1/_sources/game/: introduction.rst.txt  single_player.rst.txt
site/2.1/_static/: version_switcher.js
site/2.1/causal/: benchmarks.html  dag.html  decisions.html  estimands.html  estimators.html  introduction.html  motivation.html  refutations.html  wizard.html
site/2.1/game/: decision_rules.html  introduction.html  single_player.html
site/2.2/: genindex.html  index.html  objects.inv  search.html  searchindex.js
site/2.2/_sources/causal/: decisions.rst.txt  introduction.rst.txt  motivation.rst.txt
site/2.2/causal/: benchmarks.html  dag.html  decisions.html  estimands.html  estimators.html  introduction.html  motivation.html  refutations.html  wizard.html
site/2.2/game/: decision_rules.html  introduction.html  single_player.html
tests/: test_cate.py  test_cate_refutation.py  test_dag.py  test_decision.py  test_did.py  test_did_refutation.py  test_game.py  test_iv.py  test_iv_refutation.py  test_matching.py  test_matching_refutation.py  test_ols.py  test_ols_refutation.py  test_policy.py  test_policy_refutation.py  test_rct.py  test_rct_refutation.py  test_rdd.py  test_rdd_refutation.py
