[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formative"
version = "0.1.0"
description = "A Python library for causal effect estimation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Max Pagels"}]
keywords = ["causal inference", "causal estimation", "econometrics", "statistics", "DAG"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://getformative.dev"
Documentation = "https://docs.getformative.dev"
Repository = "https://github.com/maxpagels/formative"

dependencies = [
    "numpy>=2,<3",
    "statsmodels>=0.14,<0.15",
    "pandas>=3,<4",
]

[dependency-groups]
dev  = ["pytest>=9,<10", "pytest-cov", "ruff>=0.9"]
docs = ["sphinx>=9,<10", "sphinx-rtd-theme>=3,<4", "sphinx-copybutton>=0.5,<0.6", "sphinx-autodoc-typehints>=3,<4"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, isort

